Fix find dialog's focus.  Thanks for patch!

BUG: 105126


svn path=/trunk/KDE/kdebase/konsole/; revision=410615